# jse-datasphere-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ASYNC_S3_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHROMA_SERVICE_GUIDE.md  Dockerfile  LOAD_TESTING_README.md  MULTI_COMPANY_FIX.md  POLLING_IMPLEMENTATION_GUIDE.md  PRODUCTION_POLLING_SETUP.md  QUICK_FIX_404_POLLING_ERROR.md  README.md  README_DEPLOY_AWS.md  REDIS_IMPLEMENTATION_GUIDE.md  VECTOR_STORE_SPLIT_CHECKLIST.md  api.py  app.py  chroma_refactor_summary.py  companies.json  create_docker_files.bat  demo_fix.py  docker-compose.yml  example_load_test.py  find_unmapped_codes.py  frontend.py  load_test.py  locustfile.py  populate_vertex_search.py  rebuild_metadata.py  requirements.txt  run_metadata_rebuild.py  smoke_test_summarizer.py  sonar-project.properties  streaming_test_client.html  stress_test.sh  summarizer.ipynb  (+8 more)
evals/: .gitignore  README.md  cli.py  config.py  judge.py  metrics.py  persona.py  persona_actor.py  pyproject.toml  report.py  runner.py  serve.py  transcript.py
evals/client/: agent_stream.py  base.py  financial.py
evals/config/: default.yaml  judge_rubric.yaml
evals/evals/: __init__.py
evals/personas/: analyst_finds_latest_annual_report.yaml  chatstream_compare_gk_ncb_profit.yaml  chatstream_mixed_financial_and_news.yaml  chatstream_ncb_revenue_lookup.yaml  diaspora_investor_jse_access.yaml  dividend_income_investor.yaml  esg_conscious_investor.yaml  governance_researcher_board_composition.yaml  investor_compare_ncb_vs_jmmb.yaml  mda_strategy_reader.yaml  negative_chitchat_offtopic.yaml  negative_out_of_scope_exchange.yaml  negative_price_prediction.yaml  negative_prompt_injection.yaml  negative_soliciting_advice.yaml  parent_custodial_investment.yaml  retiree_low_risk_portfolio.yaml  senior_analyst_ncb_financials.yaml  sme_owner_ipo_curiosity.yaml  student_what_is_stock_market.yaml  technical_trader_market_data.yaml  user_asks_about_delisted_stock.yaml
evals/tests/: conftest.py  test_cli.py  test_client_agent_stream.py  test_client_financial.py  test_config.py  test_judge.py  test_metrics.py  test_persona.py  test_persona_actor.py  test_report.py  test_runner.py  test_transcript.py
evals/tests/fixtures/: financial_response.json  persona_valid.yaml  stream_response.txt
evals/viewer/: index.html  styles.css  viewer.js
evals/viewer/fixtures/synthetic_run/: manifest.json  (+1 more)
fastapi_app/: .dockerignore  .env.example  API_DOCUMENTATION.md  DEVELOPMENT.md  Dockerfile  QUICK_START.md  README_FAST_CHAT_V2.md  STREAMING_API_GUIDE.md  TEST_INFRASTRUCTURE_SUMMARY.md  companies.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  smoke_test_summarizer.py  test_api.py  test_async_integration.py  test_cache_optimization.py  test_chroma_utils.py  test_client.py  test_integration_chroma.py  test_meta_collection.py  test_multi_company_selection.py  test_streaming.py  validate_container.sh
fastapi_app/app/: agent.py  agent_v2.py  charting.py  chroma_utils.py  config.py  document_selector.py  dspy_modules.py  financial_utils.py  gemini_client.py  job_store.py  logging_config.py  main.py  metadata_loader.py  models.py  pdf_utils.py  progress_tracker.py  redis_job_store.py  s3_client.py  streaming_chat.py  streaming_financial_chat.py  utils.py
fastapi_app/app/_archive/: README.md  agent_orchestrator.py
fastapi_app/app/middleware/: metrics.py  request_id.py
fastapi_app/app/utils/: cost_tracking.py  monitoring.py
fastapi_app/copilot/: .workspace
fastapi_app/copilot/examples/: README.md  VERSION
fastapi_app/docs/: API_DOCUMENTATION.md  COPILOT_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_FAST_CHAT_V2.md  README_FAST_CHAT_V2.md  README_STREAMING.md  STREAMING_API_GUIDE.md
fastapi_app/tests/: README.md  README_STREAMING_TESTS.md  bq_test_data.csv  conftest.py  run_streaming_tests.py  smoke_test_summarizer.py  test_api.py  test_api_integration.py  test_async_s3_downloads.py  test_cache_optimization.py  test_chroma_utils.py  test_financial_utils.py  test_history_context.py  test_integration_chroma.py  test_meta_collection.py  test_streaming.py  test_streaming_units.py  validate_fast_chat_v2.sh  validate_fix.py
fastapi_app/tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_streaming_flow.py
fastapi_app/tests/uat/: __init__.py  conftest.py  test_uat_agent_chat.py  uat_runner.py
fastapi_app/tests/unit/: __init__.py  test_agent.py  test_agent_prompt_optimization.py  test_cost_tracking.py  test_document_selector.py  test_gemini_client.py  test_metadata_loader.py  test_pdf_utils.py  test_s3_client.py
(+70 files in other folders)
