[project]
name = "jse-eval-suite"
version = "0.1.0"
description = "Persona-driven multi-turn evaluation harness for the JSE chatbot"
requires-python = ">=3.10,<3.13"

dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evals", "evals.client"]

[tool.setuptools.package-dir]
"evals" = "."
"evals.client" = "client"

[tool.setuptools.package-data]
"evals" = ["config/*.yaml", "personas/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
