[project]
name = "jse-datasphere-chatbot"
version = "2.0.0"
description = "FastAPI chatbot for JSE financial data and document queries"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "JSE DataSphere Team"}
]

dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34,<1.35",
    "aioboto3>=13.0.0",
    "pypdf>=3.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-auth>=2.40.0",
    "vertexai>=1.60.0",
    "rapidfuzz>=3.0.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "google-cloud-bigquery>=3.30.0",
    "pandas>=2.0.0",
    "aiofiles>=23.2.0",
    "streamlit>=1.30.0",
    "redis>=4.2.0",
    "structlog>=24.1.0",
    "grpcio>=1.60.0,<2.0.0",
    "protobuf>=4.25.0,<6.0.0",
    "tenacity>=8.0.0",
    "requests>=2.31.0",
    "openpyxl==3.1.2",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err/None (too noisy for existing code)
    "B017",  # pytest.raises(Exception) is fine for test code
    "C901",  # too complex
    "E402",  # module level import not at top (acceptable in some test files)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # Allow test fixtures
"app/streaming_chat.py" = ["E", "W", "F", "I", "B", "C4"]  # Excluded in pre-commit
"main.py" = ["E", "W", "F", "I", "B", "C4"]  # Excluded in pre-commit
"test_async_integration.py" = ["E", "W", "F", "I", "B", "C4"]  # Excluded in pre-commit

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = [".", "app"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=tests/unit/test_document_selector.py",
    "--ignore=tests/unit/test_pdf_utils.py",
    "--ignore=tests/unit/test_s3_client.py",
    "--ignore=tests/unit/test_metadata_loader.py",
    "--ignore=tests/unit/test_gemini_client.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 0
